# improving-your-data-visualizations-in-python

./: pyproject.toml
datasets/: markets_cleaned.csv
week 1/: annotations.py  comparing_groups.py  highlighting_your_data.py
week 2/: categorical_palettes.py  color_in_visualizations.py  continuous_color_palettes.py
week 3/: beyond_95%.py  confidence_bands.py  point_estimate_intervals.py  visualizing_the_bootstrap.py
week 4/: exploring_patterns.py  first_explorations.py  making_your_visualizations_efficient.py  tweaking_your_plots.py
